--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
       </button>
   
       <div id="mobileMenu" class="d-md-none mobile-menu d-none">
-        <a class="nav-link" href="#events">EVENTS</a>
+        <a class="nav-link" href="index.html#events">EVENTS</a>
         <a class="nav-link" href="#">MAP</a>
         <a class="nav-link" href="#">FORUM</a>
         <a id="mobileUserAction" class="nav-link" href="login.html">Sign Up / Login</a>
@@ -36,7 +36,7 @@
   
       <!-- regular navbar links (desktop) -->
       <div class="navbar-center d-none d-md-flex gap-4">
-        <a class="nav-link" href="#events">EVENTS</a>
+        <a class="nav-link" href="index.html#events">EVENTS</a>
         <a class="nav-link" href="#">MAP</a>
         <a class="nav-link" href="#">FORUM</a>
       </div>
