Stray Number bug hotfix on profile page

--- a/profile.html
+++ b/profile.html
@@ -63,7 +63,7 @@
 <div class="container my-5">
 <h1 class="mb-4">Your Profile</h1>
 <form id="profileForm" class="mx-auto" style="max-width:400px;">
-    2<div class="mb-3">
+    <div class="mb-3">
     <label for="profileUsername" class="form-label">Display Name</label>
     <input type="text" id="profileUsername" class="form-control" required>
     </div>
