--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
   
       <!-- logo -->
       <a class="navbar-brand d-flex align-items-center" href="index.html">
-        <img src="images/BECc.png" alt="Logo" width="40" height="40">
+        <img src="images/BECc.png" alt="Logo" width="40" height="40"> <!-- LOGO CREATED WITH GENERATIVE AI -->
       </a>
   
       <!-- hamburger toggle (mobile) -->
