--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
     <div class="container-fluid nav-grid align-items-center">
   
       <a class="navbar-brand d-flex align-items-center" href="index.html">
-        <img src="images/BECc.png" alt="Logo" width="40" height="40">
+        <img src="images/BECc.png" alt="Logo" width="40" height="40"> <!-- LOGO CREATED WITH GENERATIVE AI -->
       </a>
   
       <button id="mobileMenuBtn" class="d-md-none border-0 bg-transparent ms-auto" aria-label="Toggle menu">
